--- a/.env
+++ b/.env
@@ -9,13 +9,22 @@ VITE_COLLEGE_ADDRESS=เลขที่ 8  ถนนโพธ์ศรี ตำ
 VITE_COLLEGE_PHONE=042-224-6690
 VITE_DEV_NAME=ภาณุเมศ ชุมภูนท์
 
-# Images (Google Drive Direct Links)
-VITE_IMAGE_GIFT_old=https://drive.google.com/uc?export=view&id=1-PUmCfQHlnDa8bhBZQKYPk53CeR-LDXh
-VITE_IMAGE_LOGO_old=https://drive.google.com/uc?export=view&id=1-ZdJMTVGHF9b-6CS0QSEu-UVSNWmX8Mx
-VITE_IMAGE_GIFT=https://drive.google.com/uc?id=1-PUmCfQHlnDa8bhBZQKYPk53CeR-LDXh&export=download
-VITE_IMAGE_LOGO=https://drive.google.com/uc?id=1-ZdJMTVGHF9b-6CS0QSEu-UVSNWmX8Mx&export=download
+# Images - ลองวิธีใหม่สำหรับ Google Drive
+# แปลง File ID จาก Google Drive URLs เดิม
+VITE_IMAGE_LOGO_FILE_ID=1-ZdJMTVGHF9b-6CS0QSEu-UVSNWmX8Mx
+VITE_IMAGE_GIFT_FILE_ID=1-PUmCfQHlnDa8bhBZQKYPk53CeR-LDXh
 
+# ลอง Google Drive API แบบใหม่ (หลายรูปแบบ)
+VITE_IMAGE_LOGO=https://drive.google.com/thumbnail?id=1-ZdJMTVGHF9b-6CS0QSEu-UVSNWmX8Mx&sz=w200
+VITE_IMAGE_GIFT=https://drive.google.com/thumbnail?id=1-PUmCfQHlnDa8bhBZQKYPk53CeR-LDXh&sz=w400
 
+# Backup URLs (ถ้าอันบนไม่ได้)
+VITE_IMAGE_LOGO_BACKUP=https://lh3.googleusercontent.com/d/1-ZdJMTVGHF9b-6CS0QSEu-UVSNWmX8Mx
+VITE_IMAGE_GIFT_BACKUP=https://lh3.googleusercontent.com/d/1-PUmCfQHlnDa8bhBZQKYPk53CeR-LDXh
+
+# Alternative method - Proxy
+VITE_IMAGE_LOGO_PROXY=https://drive.google.com/uc?export=download&id=1-ZdJMTVGHF9b-6CS0QSEu-UVSNWmX8Mx
+VITE_IMAGE_GIFT_PROXY=https://drive.google.com/uc?export=download&id=1-PUmCfQHlnDa8bhBZQKYPk53CeR-LDXh
 
 # Payment Information  
 VITE_BANK_NAME=ธนาคารกรุงไทย
