--- a/.env
+++ b/.env
@@ -14,6 +14,9 @@ VITE_DEV_NAME=ภาณุเมศ ชุมภูนท์
 VITE_IMAGE_LOGO_FILE_ID=1-ZdJMTVGHF9b-6CS0QSEu-UVSNWmX8Mx
 VITE_IMAGE_GIFT_FILE_ID=1-PUmCfQHlnDa8bhBZQKYPk53CeR-LDXh
 
+# Image Cloudinary
+VITE_IMAGE_LOGO_URL_CLOUDINARY=https://res.cloudinary.com/dzysz9ib8/image/upload/v1748161251/logo_egljnc.jpg
+VITE_IMAGE_GIFT_URL_CLOUDINARY=https://res.cloudinary.com/dzysz9ib8/image/upload/v1748161486/gift_lxi5wp.jpg
 # ลอง Google Drive API แบบใหม่ (หลายรูปแบบ)
 VITE_IMAGE_LOGO=https://drive.google.com/thumbnail?id=1-ZdJMTVGHF9b-6CS0QSEu-UVSNWmX8Mx&sz=w200
 VITE_IMAGE_GIFT=https://drive.google.com/thumbnail?id=1-PUmCfQHlnDa8bhBZQKYPk53CeR-LDXh&sz=w400
