--- a/.env
+++ b/.env
@@ -15,11 +15,14 @@ VITE_IMAGE_LOGO_FILE_ID=1-ZdJMTVGHF9b-6CS0QSEu-UVSNWmX8Mx
 VITE_IMAGE_GIFT_FILE_ID=1-PUmCfQHlnDa8bhBZQKYPk53CeR-LDXh
 
 # Image Cloudinary
-VITE_IMAGE_LOGO_URL_CLOUDINARY=https://res.cloudinary.com/dzysz9ib8/image/upload/v1748161251/logo_egljnc.jpg
+VITE_IMAGE_LOGO_URL_CLOUDINARY=https://res.cloudinary.com/dzysz9ib8/image/upload/v1748184300/Udvc.imp_gork69.png
 VITE_IMAGE_GIFT_URL_CLOUDINARY=https://res.cloudinary.com/dzysz9ib8/image/upload/v1748161486/gift_lxi5wp.jpg
+VITE_IMAGE_HERO_URL_CLOUDINARY=https://res.cloudinary.com/dzysz9ib8/image/upload/v1748181487/coverudvc_pvbfzc.jpg
+
 # ลอง Google Drive API แบบใหม่ (หลายรูปแบบ)
 VITE_IMAGE_LOGO=https://drive.google.com/thumbnail?id=1-ZdJMTVGHF9b-6CS0QSEu-UVSNWmX8Mx&sz=w200
 VITE_IMAGE_GIFT=https://drive.google.com/thumbnail?id=1-PUmCfQHlnDa8bhBZQKYPk53CeR-LDXh&sz=w400
+
 
 # Backup URLs (ถ้าอันบนไม่ได้)
 VITE_IMAGE_LOGO_BACKUP=https://lh3.googleusercontent.com/d/1-ZdJMTVGHF9b-6CS0QSEu-UVSNWmX8Mx
