--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -15,7 +15,7 @@ on:
 
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/alumni-frontend
+  IMAGE_NAME: ghcr.io/${{ github.repository_owner }}/fontend-alumni
 
 jobs:
   # ===== Build and Test Job =====
@@ -88,7 +88,6 @@ jobs:
           host: ${{ secrets.SERVER_HOST }}
           username: ${{ secrets.SERVER_USER }}
           key: ${{ secrets.SSH_PRIVATE_KEY }}
-          port: ${{ secrets.SSH_PORT || 22 }}
           script: |
             echo "🎨 Deploying Alumni Frontend..."
             
