--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # API Configuration
-VITE_API_URL=http://localhost:5500
+VITE_API_URL=http://49.231.145.165:5500
 VITE_ENV=development
 
 # Application Settings
