Test with SSH_PRIVATE_KEY secret

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ VITE_APP_NAME=ระบบลงทะเบียนศิษย์เก่า
 VITE_COLLEGE_NAME=วิทยาลัยอาชีวศึกษาอุดรธานี
 VITE_COLLEGE_ADDRESS=เลขที่ 8  ถนนโพธ์ศรี ตำบลหมากแข้ง  อำเภอเมือง จังหวัดอุดรธานี 41000  
 VITE_COLLEGE_PHONE=042-224-6690
-VITE_DEV_NAME=นายภาณุเมศ ชุมภูนท์
+VITE_DEV_NAME=ภาณุเมศ ชุมภูนท์
 
 # Images - ลองวิธีใหม่สำหรับ Google Drive
 # แปลง File ID จาก Google Drive URLs เดิม
