--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -85,7 +85,7 @@ jobs:
       - name: Set up SSH
         uses: webfactory/ssh-agent@v0.7.0
         with:
-          ssh-private-key: ${{ secrets.DEPLOY_KEY }}
+          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
       # 🚀 Deploy to Server
       - name: Deploy Frontend to Server
