--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -86,6 +86,18 @@ jobs:
         uses: webfactory/ssh-agent@v0.7.0
         with:
           ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
+      
+      # 🔍 Debug SSH Connection
+      - name: Debug SSH Connection
+        run: |
+          echo "SERVER_HOST: ${{ secrets.SERVER_HOST }}"
+          echo "SERVER_USER: ${{ secrets.SERVER_USER }}"
+          echo "Testing DNS resolution..."
+          nslookup ${{ secrets.SERVER_HOST }} || echo "nslookup failed"
+          ping -c 1 ${{ secrets.SERVER_HOST }} || echo "ping failed"
+          echo "Testing SSH connection..."
+          ssh -o StrictHostKeyChecking=no -o ConnectTimeout=10 ${{ secrets.SERVER_USER }}@${{ secrets.SERVER_HOST }} 'echo "SSH connection successful"'
+
 
       # 🚀 Deploy to Server
       - name: Deploy Frontend to Server
